Change DTO models for APIs + change logic of some rest APIs